# web-benchmark-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
config/: default.py
docs/assets/: architecture.mmd  architecture_text.txt
examples/: basic_usage.py
src/: main.py
src/extractors/: __init__.py  base.py  firecrawl.py  jina.py
src/llm/: processor.py
src/web/: app.py
src/web/templates/: index.html
tests/extractors/: test_extractors.py
